# py_wined

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/py_wined/: __init__.py  py_wined.py
tests/: test_py_wined.py
